--- a/_posts/2023-05-28-MPI-2.md
+++ b/_posts/2023-05-28-MPI-2.md
@@ -4,5 +4,64 @@ date: 2023-03-21
 categories: [MPI, pGM]
 ---
 
-To be finished
+In this section, some basic examples will be provided to help understand how MPI works. We can first go through a "Hello World" example.
 
+```c
+#include <stdio.h>
+#include <string.h>
+#include <mpi.h>
+
+int main(int argc, char ** argv[]){
+	int my_rank;
+	int num_of_processes;
+	int source; // sender
+	int dest;   // receiver
+	int tag = 0;
+	char message[100];
+	MPI_Status status;
+	
+	MPI_Init(&argc, &argv);
+	MPI_Comm_size(MPI_COMM_WORLD, &num_of_processes);
+	MPI_Comm_rank(MPI_COMM_WORLD, &my_rank);
+	if (my_rank != 0){
+		sprintf(message,"Greetings from process %d",my_rank);
+		dest = 0;
+		MPI_Send(message, strlen(message+1),MPI_CHAR,dest,tag,MPI_COMM_WORLD);
+	}else{
+		for (source = 1; source < num_of_processes; source++){
+			MPI_Recv(message,100,MPI_CHAR,source,tag,MPI_COMM_WORLD,&status);
+			printf("%s\n", message);
+		}
+	}
+	MPI_Finalize();
+}
+```
+
+The program goes likes this:
+1. The hello world program first include the MPI library. 
+2. The MPI process starts with `MPI_Init` and end with `MPI_Finalize`. 
+3. Inside the MPI block, different processes can use `MPI_Comm_rank` to check the current process number and use `MPI_Comm_size` to obtain the total number of processes. 
+4. Inside the MPI block, one process can send or receive message from different processes
+
+
+MPI uses a consistent scheme for MPI-defined identifiers, which begins with 'MPI_'
+
+
+
+Elementary MPI datatypes
+
+| MPI Datatype      | C equivalent |
+| ----------- | ----------- |
+| MPI_SHORT      | short int       |
+| MPI_INT   | int        |
+|MPI_LONG | long int|
+|MPI_LONG_LONG|long long int|
+|MPI_UNSIGNED_CHAR|unsigned char|
+|MPI_UNSIGNED_SHORT|unsigned short int|
+|MPI_UNSIGNED|unsigned int|
+|MPI_UNSIGNED_LONG|unsigned long int|
+|MPI_UNSIGNED_LONG_LONG|unsigned long long int|
+|MPI_FLOAT|float|
+|MPI_DOUBLE|double|
+|MPI_LONG_DOUBLE|long double|
+|MPI_BYTE|char|
