--- a/_posts/2023-05-28-MPI-1.md
+++ b/_posts/2023-05-28-MPI-1.md
@@ -1,7 +1,7 @@
 ---
 title: "MPI--An Overview"
-date: 2023-03-21
-categories: [MPI, pGM]
+date: 2023-05-28
+categories: [MPI, coding]
 ---
 # An overview of MPI
 To be finished
