--- a/_posts/2023-05-30-MPI-TOC.md
+++ b/_posts/2023-05-30-MPI-TOC.md
@@ -5,4 +5,4 @@ categories: [MPI, coding]
 toc: true
 ---
 
-
+This is my blog post. Check out this other post: [My Other Post]({% post_url 2023-05-29-MPI-2 %})
