--- a/_posts/2023-05-29-MPI-2.md
+++ b/_posts/2023-05-29-MPI-2.md
@@ -74,4 +74,4 @@ Note that, the communicator is a collection of processes that can send messages 
 
 As can be seen from these functions, one can process data in one process and then send the message to a root process to collect all the data in each process and combine them. Sending and receiving from one process to another is often reffered as point-to-point communication.
 
-In the next section[[2023-05-30-MPI-3]], an example of application will be used to enhance our understanding.
+In the [next section]({% post_url 2023-05-29-MPI-3 %}), an example of application will be used to enhance our understanding.
