--- a/_posts/2023-05-30-MPI-3.md
+++ b/_posts/2023-05-30-MPI-3.md
@@ -4,3 +4,5 @@ date: 2023-05-30
 categories: [MPI, coding]
 ---
 In  this section, we will show how to use MPI's send and receive message functions to build up a numerical integration application.
+
+The trapezoidal rule will be used here to estimate integral of f(x), where we divide the region into *n* trapezoids with the base $h=\frac{b-a}{n}$
