--- a/_posts/2023-05-30-MPI-3.md
+++ b/_posts/2023-05-30-MPI-3.md
@@ -2,7 +2,112 @@
 title: "MPI--Numerical Integration"
 date: 2023-05-30
 categories: [MPI, coding]
+use:math
 ---
 In  this section, we will show how to use MPI's send and receive message functions to build up a numerical integration application.
 
-The trapezoidal rule will be used here to estimate integral of f(x), where we divide the region into *n* trapezoids with the base $h=\frac{b-a}{n}$, the area for each trapezoid can be estimated as: $Area=\frac{1}{2}h[f(x_{i-1}+f(x_i))]$ 
+The trapezoidal rule will be used here to estimate integral of f(x), where we divide the region into *n* trapezoids with the base $h=\frac{b-a}{n}$, the area for each trapezoid can be estimated as: $Area=\frac{1}{2}h[f(x_{i-1}+f(x_i))]$ .
+
+As a result, the overall integral can be written as:
+$$
+\int_a^b f(x)dx=[f(x_0)/2+f(x_n)/2+f(x_1)+f(x_2)+...+f(x_{n-1})]h
+$$
+
+This certained can be calculated with a serial program
+```C
+#include <stdio.h>
+main(){
+	float integral;
+	float a, b;
+	int   n;
+	float h;
+	float x;
+	int   i;
+	
+	float f(float x);
+	printf("Enter a, b, and n\n");
+	scanf("%f %f %d", &a, &b, &n);
+
+	h = (b-a)/n;
+	integral = (f(a) + f(b))/2.0;
+	x = a;
+	for (i=1; i<=n-1; i++){
+		x = x + h;
+		integral = integral + f(x);
+	}
+	integral = integral * h;
+	printf("The estimated value for the integral is %f", integral)
+}
+```
+
+This problem can be easily parallelized by assigning a subinterval for each process, and then the local computation results will be messaged to the root node where the final result is calculated. Let's use some fixed values for illustration.
+
+```C
+#include <stdio.h>
+#include "mpi.h"
+
+main(int argc, char ** argv[]){
+	int my_rank;
+	int p;
+	float a = 0.0;
+	float b = 1.0;
+	int   n = 1024;
+	float h;
+	float x;
+	float local_a;
+	float local_b;
+	int   local_n;
+
+	float integral;
+	float total;
+	int   source;
+	int   dest=0;
+	int   tag=0;
+	MPI_Status status;
+	
+	float Trap(float local_a, float local_b, int local_n, float h);
+
+	MPI_Init(int argc, char ** argv[]);
+	MPI_Comm_size(MPI_COMM_WORLD, &p);
+	MPI_Comm_rank(MPI_COMM_WORLD, &my_rank);
+	h = (b-a)/n;
+	local_n = n/p;
+	local_a = a + my_rank * local_n * h;
+	local_b = local_a + local_n * h;
+	integral = Trap(local_a, local_b, local_n, h);
+
+	if(my_rank==0){
+		total = integral;
+		for (source = 1; source < p; source++){
+			MPI_Recv(&integral, 1, MPI_FLOAT, source, tag, MPI_COMM_WORLD, &status);
+			total = total + integral;
+		}
+	}else{
+		MPI_Send(&integral, 1, MPI_FLOAT, dest, tag, MPI_COMM_WORLD);
+	}
+	if(my_rank==0){
+		printf("The estimated value for the integral is %f", total)
+	}
+	MPI_Finalize();
+}
+```
+
+In this section, we see an example of a real example which sub-partition is used in order to parallellize the conventional serial algorithm. For this problem, we partitioned the interval of integration among the processes and each process estimated integral over its subinterval.
+
+One important thing to note is that we always need to pay attention to distinguish the global variable and local variable.
+
+---
+Now consider using Simpson's rule to integrate, where f(x) is approximated as arcs of parabolas. Suppose p< q are real numbers, and let r be the midpoint of segment \[p,q], If we let h=(q-p)/2, then an equation for the parabola passing through the points (p,f(p)), (r,f(r)), (q,f(q)) is
+$$
+y=\frac{f(p)}{2h^2}(x-r)(x-q)-\frac{f(r)}{h^2}(x-p)(x-q)+\frac{f(q)}{2h^2}(x-p)(x-r)
+$$
+If we integrate this, we can obtain:
+$$
+\frac{h}{3}[f(p)+4f(r)+f(q)]
+$$
+Using the same notation above, the integral can be written as
+$$
+\int_a^b f(x)dx=\frac{h}{3}[f(x_0)+4f(x_1)+2f(x_2)+4f(x_3)+...+2f(x_{n-2})+4f(x_{n-1})+f(x_n)]
+$$
+
+Consider how to write the program(will come back later)
