--- a/_posts/2023-05-30-MPI-3.md
+++ b/_posts/2023-05-30-MPI-3.md
@@ -2,7 +2,7 @@
 title: "MPI--Numerical Integration"
 date: 2023-05-30
 categories: [MPI, coding]
-use:math
+math:true
 ---
 In  this section, we will show how to use MPI's send and receive message functions to build up a numerical integration application.
 
