--- a/_posts/2023-05-30-MPI-4.md
+++ b/_posts/2023-05-30-MPI-4.md
@@ -2,7 +2,7 @@
 title: "MPI--Collective Communication"
 date: 2023-05-30
 categories: [MPI, coding]
-math:true
+mathjax:true
 ---
 In  the previous section, we showed how point-to-point communication works. In this section, we will show how the collective communication saves effort.
 
