--- a/_posts/2023-05-30-MPI-3.md
+++ b/_posts/2023-05-30-MPI-3.md
@@ -5,7 +5,7 @@ categories: [MPI, coding]
 ---
 In  this section, we will show how to use MPI's send and receive message functions to build up a numerical integration application.
 
-The trapezoidal rule will be used here to estimate integral of f(x), where we divide the region into *n* trapezoids with the base $h=\frac{b-a}{n}$, the area for each trapezoid can be estimated as: $Area=\frac{1}{2}h[f(x_{i-1}+f(x_i))]$.
+The trapezoidal rule will be used here to estimate integral of f(x), where we divide the region into *n* trapezoids with the base $$h=\frac{b-a}{n}$$, the area for each trapezoid can be estimated as: $$Area=\frac{1}{2}h[f(x_{i-1}+f(x_i))]$$.
 
 As a result, the overall integral can be written as:
 $$
