--- a/_posts/2023-06-02-MPI-6.md
+++ b/_posts/2023-06-02-MPI-6.md
@@ -75,6 +75,11 @@ MPI_Address(void* location, MPI_Aint* Address);
 After structing derived datatype, one also need to commit it for use using `MPI_Type_commit`.
 
 ### Other constructors
-`MPI_Type_struct` works for most generous case where we need to provide every detailed information. However, in some cases, we may have some special types of data, e.g., arrays, which itself uses contiguous address and same datatype. We can save time by using the following constructors
-#### 'MPI_Type_vector'
+`MPI_Type_struct` works for most generous case where we need to provide every detailed information. However, in some cases, we may have some special types of data, e.g., arrays, which itself uses contiguous address and same datatype. We can save time by using the following constructors.
+
+#### `MPI_Type_vector`
 Consider the case where we want to send some row part of a matrix A
+
+#### `MPI_Type_contiguous`
+
+#### `MPI_Type_indexed` 
